--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,15 @@ body {
   min-height: 600px;
   background-color: rgb(0, 0, 20);
 }
+
+* {
+  transition: all 150ms;
+}
+
+.noDrag {
+  -webkit-app-region: no-drag
+}
+
+.drag {
+  -webkit-app-region: drag;
+}
